# WeatherCLI

grrs/: Cargo.toml
grrs/src/: main.rs
weather/: Cargo.toml
weather/src/: main.rs
