[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive", "wrap_help"] }
colored = "2.0.4"
dotenv = { version = "0.15.0", features = ["clap"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
structstruck = "0.4.1"
tokio = { version = "1.32.0", features = ["full"] }
